--- a/localization/english/bookmarks/first_punic_war_l_english.yml
+++ b/localization/english/bookmarks/first_punic_war_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
  
  #General Group localization
- BCE_263_punic_wars: "263 BCE"
- start_year_490_01_01_desc: "263 BCE is a year before the First Punic War started. Playing in this start date you can decide to change the faith of history. Meanwhile, in the east, the successor's states of the Diadokhis are still in war, who will be able to claim the lost Alexander's Empire?"
+ BCE_265_punic_wars: "265 BCE"
+ start_year_490_01_01_desc: "265 BCE is a year before the First Punic War started. Playing in this start date you can decide to change the faith of history. Meanwhile, in the east, the successor's states of the Diadokhis are still in war, who will be able to claim the lost Alexander's Empire?"
  
  #First Punic War localization
- BCE_263_first_punic_war: "First Punic War"
- BCE_263_first_punic_war_desc: "263 BCE is a year before the First Punic War started. Playing in this start date you can decide to change the faith of history. Meanwhile, in the east, the successor's states of the Diadokhis are still in war, who will be able to claim the lost Alexander's Empire?"
- manius_valerius_maximus_messalla: "Senator Manius Valerius"
- manius_valerius_maximus_messalla_desc: "The Senator Manius Valerius came in power recently as co-consul of the Res Publica Romana, in a period where the tension with the Carthaginians is at an all time high. Meanwhile, in the north, celtic tribes are roaming cities which are rightfully roman. The decisions you will make will shape not only your dynasty's future, but the whole world's future. Choose wisely."
+ BCE_265_first_punic_war: "First Punic War"
+ BCE_265_first_punic_war_desc: "265 BCE is a year before the First Punic War started. Playing in this start date you can decide to change the faith of history. Meanwhile, in the east, the successor's states of the Diadokhis are still in war, who will be able to claim the lost Alexander's Empire?"
+ quintus_fabius_maximus_gurges: "Senator Quintus Fabius Maximus Gurges"
+ quintus_fabius_maximus_gurges_desc: "The Senator Quintus Fabius Maximus Gurges came in power recently as co-consul of the Res Publica Romana, in a period where the tension with the Carthaginians is at an all time high. Meanwhile, in the north, celtic tribes are roaming cities which are rightfully roman. The decisions you will make will shape not only your dynasty's future, but the whole world's future. Choose wisely."
  
