--- a/localization/english/religion/holy_sites_l_english.yml
+++ b/localization/english/religion/holy_sites_l_english.yml
@@ -54,5 +54,5 @@
  holy_site_pannonia_basin_name: "Pannonia Basin"
  holy_site_externsteine_name: "Externsteine"
  holy_site_debul_name: "Debul"
- holy_site_rajanpur_name: "rajanpur"
+ holy_site_rajanpur_name: "Rajanpur"
  
