Add new cultures
new Arabic cultures
new East African cultures
culture adjustments
icon fix
geographical regions fix
landed_titles change
title fixes

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -89,7 +89,10 @@
  pax_ethiopian_collective_noun: "Ethiopians"
  pax_blemmyian: "Blemmyian"
  pax_blemmyian_prefix: "Blemmyian"
- pax_blemmyian_collective_noun: "Blemmyians"
+ pax_blemmyian_collective_noun: "Blemmyes"
+ nilotic: "Nilotic"
+ nilotic_prefix: "Nilotic"
+ nilotic_collective_noun: "Nilotians"
  berber: "Berber"
  berber_prefix: "Berber"
  berber_collective_noun: "Berbers"
@@ -295,6 +298,18 @@
  nabataean: "Nabataean"
  nabataean_prefix: "Nabataean"
  nabataean_collective_noun: "Nabataeas"
+ hismaic: "Hismaic"
+ hismaic_prefix: "Hismaic"
+ hismaic_collective_noun: "Hismaicans"
+ dumaitic: "Dumaitic"
+ dumaitic_prefix: "Dumaitic"
+ dumaitic_collective_noun: "Dumaitians"
+ taymanitic: "Taymanitic"
+ taymanitic_prefix: "Taymanitic"
+ taymanitic_collective_noun: "Taymanitians"
+ hasaitic: "Hasaitic"
+ hasaitic_prefix: "Hasaitic"
+ hasaitic_collective_noun: "Hasaitians"
  aramaeer: "Syrian"
  aramaeer_prefix: "Syrian"
  aramaeer_collective_noun: "Syrians "
