Fix culture Name

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -298,6 +298,9 @@
  nabataean: "Nabataean"
  nabataean_prefix: "Nabataean"
  nabataean_collective_noun: "Nabataeas"
+ magan: "Magan"
+ magan_prefix: "Magan"
+ magan_collective_noun: "Maganians"
  hismaic: "Hismaic"
  hismaic_prefix: "Hismaic"
  hismaic_collective_noun: "Hismaicans"
