--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -66,5 +66,5 @@
  language_thamudic_name: "Thamudian"
  language_qataban_name: "Qatabanian"
  language_hadramautian_name: "Hadramautian"
- language_dilmun_name: "Dilmutic"
+ language_magan_name: "Maganian"
  language_cushitic_name: "Cushitic"
