added some macedonian and roman characters

--- a/localization/english/PaxDynasties_names_l_english.yml
+++ b/localization/english/PaxDynasties_names_l_english.yml
@@ -4,7 +4,15 @@
  # Names
  ############################################################
 
- dynn_valerius: "Valerius"
+dynn_valerius: "Valeria"
+dynn_fabius_maximus: "Fabia"
+dynn_fabia_vibulana: "Fabia Vibulana"
+dynn_fabia_maxima: "Fabia Maxima"
+dynn_fabia_ambusta: "Fabia Ambusta"
+dynn_argead: "Argead"
+dynn_antipatrid: "Antipatrid"
+dynn_lysimachid: "Lysimachid"
+dynn_ptolemy: "Ptolemaic"
  dynn_finni: "Finni"
  dynn_o_brian: "O'Brian"
  dynn_whelani: "Whelani"
