Add new culture
New germanic culture
new iranian cultures
new baltic cultures

--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -68,3 +68,6 @@
  language_hadramautian_name: "Hadramautian"
  language_magan_name: "Maganian"
  language_cushitic_name: "Cushitic"
+ language_carpi_name: "Carpian"
+ language_sogdian_name: "Sogdian"
+ language_kharesmian_name: "kharesmian"
