--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -168,8 +168,8 @@
  north_sea_germans: "North Sea Germanic"
  north_sea_germans_prefix: "north_sea_germans Germanic"
  north_sea_germans_collective_noun: "Germans"
- rhen_germans: "Rhen German"
- rhen_germans_prefix: "Rhen German"
+ rhen_germans: "Rhen Germanic"
+ rhen_germans_prefix: "Rhen Germanic"
  rhen_germans_collective_noun: "Germans"
  weser_germans: "Weser Germanic"
  weser_germans_prefix: "Weser Germanic"
