--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -23652,7 +23652,7 @@
  
  
  # PAX ROMANA TITLES
- e_roman_respublica: "Res publica Romana"
+ e_roman_respublica: "Roma"
  e_roman_respublica_adj: "Roman"
  k_magna_grecia: "Magna Grecia"
  k_magna_grecia_adj: "Greek"
