--- a/localization/english/res_publica_localization/government_related_loc_l_english.yml
+++ b/localization/english/res_publica_localization/government_related_loc_l_english.yml
@@ -6,7 +6,7 @@
  res_publica_government_obbligations: "From [liege|E] [prestige_level|E]"
  government_is_res_publica: "[government|E] type is [GetGovernment( 'res_publica_government' ).GetName]" 
  res_publica_indipendent: "$res_publica_government$"
- res_publica_vassal_title: "Region"
  res_publica_consul: "Consul"
  res_publica_governor: "Governor"
  res_publica_tributary: "Tributary State"
+ res_publica_region: "Region"
