a lot of progress and changes

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -5813,7 +5813,6 @@
  b_liunga: "Linuga"
  b_livkand: "Livkand"
  b_livno: "Livno"
- b_livorno: "Livorno"
  b_liw: "Liw"
  b_lizarra: "Lizarra"
  b_lizmajarvi: "Lizmajärvi"
@@ -24162,8 +24161,8 @@
  c_bologna: "Bononia"
  c_bologna_adj: "Bononian"
  b_pisa: "Pisae"
- c_pisa: "Pisae"
- c_pisa_adj: "Pisaen"
+ c_pisa: "Pisna"
+ c_pisa_adj: "Pisnian"
  b_firenze: "Asretium"
  c_firenze: "Asretium"
  c_firenze_adj: "Asretian"
@@ -24734,3 +24733,4 @@
  c_millerovo_adj: "Millerovian"
  d_lycia: "Lycia"
  d_lycia_adj: "Lycian"
+ b_livorno: "Pisna"
