--- a/localization/english/culture/innovations/PAXhellenic_innovations_l_english.yml
+++ b/localization/english/culture/innovations/PAXhellenic_innovations_l_english.yml
@@ -2,11 +2,11 @@
 
  # Military
  innovation_pteruges: "Pteruges"
- innovation_pteruges_desc: "One pteruge is just a strip of fabric, useless alone, but multiple pteruges combined together form an armor, a cuirass. In the same way one single man fighting alone, even if well trained, is useless, but a whole unit of them is going to form an impenetrable wall."
+ innovation_pteruges_desc: "Strips of leather or folded linens lined together like the mighty phalanx, pteruges form a protective skirt under the curaisses and around the shoulders of soldiers all over the Hellenic world."
  innovation_human_hunting_machines: "Human Hunting Machines"
  innovation_human_hunting_machines_desc: "Silent giant killers, the roman took the greek Polybolos and made their own version: the Scorpio. This semi-stationary weapon can kill multiple people in a single shot from a long distance, just be careful and do not aim it at your own men." 
  innovation_stone_walls: "Stone Walls"
- innovation_stone_walls_desc: "Try to destroy a wooden wall and with the right tools you are done in a couple of minutes. Try that again with a stone wall. It is not that is now, isn't it?"
+ innovation_stone_walls_desc: "Wooden walls have proven to be unreliable against forseeable threats. Flames, boulders, and clever men. We must develop our knowledge of stone and masonry to stifle the tools of our enemies in the future."
  innovation_seric_steel: "Seric Steel"
  innovation_seric_steel_desc: "Ferrite, pearlite, sulfur, arsenic, iron, all together to exhibit unique patterns. Every single blackend line telling a story of molecules fusing together to form something new, more solid than before, stronger, which makes the job of exterminating other humans easier. You can call it "Wootz Steel", the Indians invented it, but we call it "Seric Steel"."
  innovation_pilum: "Pilum"
