--- a/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
+++ b/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
@@ -1,43 +1,43 @@
 ﻿l_english:
  # Military Innovations
  innovation_trireme: "Trireme"
- innovation_trireme_desc: "Phoenecians and Greeks tought all of Europe how to build ships. Triremes are the go-to design for war boats and trading ships alike."
+ innovation_trireme_desc: "The Phoenicians and Greeks terrorized the Roman world with their naval supremacy. Whether it be for boats of war, or trading ships, Triremes were the go-to design."
  innovation_tribal_sieges: "Tribal Sieges"
- innovation_tribal_sieges_desc: "Since cities were built, people tried to conquer them and defences were built. These weapons could be useful to aid you to tear them down, at least for a while."
+ innovation_tribal_sieges_desc: "Since the dawn of the first cities, their foes tried to conquer the defences they boasted. These weapons will aid you in tearing them down. For a time, at least."
  innovation_tribal_defences: "Tribal Defences"
- innovation_tribal_defences_desc: "Reinforced wooden walls around cities, surely not the best defence you could hope for, but it is better than nothing. They will keep attackers away for a while."
+ innovation_tribal_defences_desc: "Reinforcing the wooden walls around cities might not be the best defence you could hope for, but it's far better than nothing. They should manage to keep your foes at bay. For a time. "
  innovation_iron_smithing: "Iron Smithing"
- innovation_iron_smithing_desc: "A new type of metal, easier to find than bronze, is now possible to smelt thanks to technological advancements: Iron. Warfare is changing fast thanks to it and you'd better innovate too if you want to keep up with times and not depend on other foreign powers."
+ innovation_iron_smithing_desc: "A new type of metal, easier to find than bronze, is now possible to smelt thanks to technological advancements: Iron. Thanks to it, warfare is rapidly changing. You'd best join in its innovation, or suffer the wrath of your foes."
  innovation_phalanx: "Phalanx"
- innovation_phalanx_desc: "Trained men tight in formation with their shields ready to protect the man on their side, walking together as a single being, ready to stand, fight and honour their country."
+ innovation_phalanx_desc: "Trained men march side-by-side in tight formation, their shields poised to protect the man at their side."
 
  # Civic Innovations
  innovation_city-states: "City-States"
- innovation_city-states_desc: "When a single city demonstrates resilience, when its men fight even against larger empires and win, when its women educate their childs to protect their homes, then what you get is a City-State, governed by its own people, ready to stand and fight against all odds."
- innovation_acqueducts: "Acqueducts"
- innovation_acqueducts_desc: "Water is what we are made of and the more your rule expands, the more you are going to need it and simple river streams are not going to be enough for all of your people. Acqueducts not only can redirect water virtually anywhere, but will make cities cleaner helping you against diseases."
+ innovation_city-states_desc: "From the ashes of war, only the greatest cities may rise. When its men fight against the odds, when its women instill the next generation with education and pride, when it's governed through times of peace and war by its people, the City-State dawns."
+ innovation_acqueducts: "Aqueducts"
+ innovation_acqueducts_desc: "Fundamental for all life, water is as crucial for one's rule to expand as the blades their armies wield. Simple river streams can only provide so much, but with aqueducts, water can be transported across vast distances, ensuring your people prosper, and disease is fought."
  innovation_plowshare: "Plowshare"
- innovation_plowshare_desc: "Blades are not necessarily always weapons, as a knife isn't necessarily used to kill someone, plowshares are used to aid farmers at the fine art of plowing... Unless you step on their soil uninvited."
+ innovation_plowshare_desc: "A blade need not be used for violence alone. In the hands of a farmer, a plowshare can be more beneficial than a knife, though if one step on the soil uninvited, they may find the latter pulled forth as well."
  innovation_doric_columns: "Doric Columns"
- innovation_doric_columns_desc: "Greeks are masters in architecture, making some of the finest buildings of ancient times. Doric Columns were a product of fine art and one of the three orders of Greek architecture. You could use them to create buildings that are not only resistant throught the ages, but a masterful show of art."
+ innovation_doric_columns_desc: "The Greeks are masters of architecture, and made many of the finest buildings of ancient times. Their Doric Columns showed mastery of the craft, and created buildings that not only stood the test of time, but were a source of awe and inspiration in many that beheld them."
  innovation_astronomy: "Astronomy"
- innovation_astronomy_desc: "Look at the sky during the night, you see those lights? What do they mean? Are they Gods? Could be, or maybe its a map. Decode that map and who knows what kind of riches are you going to find. Maybe not even riches, you could uncover the greatest mysteries of humanity. Oh god, maybe you should think about that: are you actually ready to find them out?"
+ innovation_astronomy_desc: "What wonders do the stars that dance upon the canopy of night hold? Are they the windows to the Gods? Or perhaps their true purpose lies in mapping the celestial itself! Were one capable of decoding that map, then the very mysteries of life itself would unravel before you. Oh God. Look at the sky during the night, you see those lights? What do they mean? Are they Gods? Could be, or maybe its a map. Decode that map and who knows what kind of riches are you going to find. Maybe not even riches, you could uncover the greatest mysteries of humanity. Oh god, maybe you should consider that possibility. You're going to, aren't you?"
  innovation_extensive_trading: "Extensive Trading" 
- innovation_extensive_trading_desc: "Autarky you say, uh? Well look at all of that gold you get while trading, looks good doesn't it? At the end of the day you do not need all of those metals, but you need gold. You always need it." 
+ innovation_extensive_trading_desc: "Autarky you say? Where's the fun in that! Look at all of that gold you get while trading, looks good doesn't it? See how it sparkles? Doesn't it just make you want even more of it? Come now, let's sit down and trade!" 
  innovation_casus_belli: "Bellum Justum"
- innovation_casus_belli_desc: "Why do you want to declare War? Why should your men fight on foreign lands away from their homes, wives and childs? Well you'd better explain it to them in a way that actually hooks them up, or be ready to never rule those lands." 
-
+ innovation_casus_belli_desc: "Why do you want to declare War? Why should your men fight on foreign lands away from their homes, their wives, their families? You'd best hope you didn't sleep through your studies in oratory. Afte rall, if you want to rule those lands, you need to justify it first!"
+ 
  # Cultural Innovations Fighters
  innovation_roman_fighters: "Roman Fighters"
- innovation_roman_fighters_desc: "They were trained, organized and deadly. You do not want to mess with the romans, they will be sure you're going to be dead before they are. It's not going to be cheap to train them, but once you have, they are going to be the simulacrum of discipline."
+ innovation_roman_fighters_desc: "Trained, organized, and deadly. The Romans were high among the forces you'd hope to avoid. Their resolve was unwavering, and their dedication ensured you'd be dead long before they were. It won't be cheap to train them, but when you do, you'll have the very model of military might."
  innovation_latin_fighters: "Latin Fighters"
- innovation_latin_fighters_desc: "Latins are people born to fight, mercenary warmongers, fearless warriors ready for anything... If the gold suffices."
+ innovation_latin_fighters_desc: "Ever are the Latins eager to fight. From the fearless warriors, to the mercenary warmongers, so long as the gold continues to flow into their pockets, you'll find dependable allies."
  innovation_etruscan_wars: "Etruscan Wars"
- innovation_etruscan_wars_desc: "What is worse, a trained soldier or a man, back against the wall, who has to fight for his own life and land? The latter is what etruscans are, they didn't want to end up like this, they didn't train for that, but yet, here they are, ready to fight."
+ innovation_etruscan_wars_desc: "One must wonder as to which is a more terrifying sight. A trained soldier, or a man, pushed to the edge of his limits, and forced to fight for all that he holds dear. The Etruscans are the latter. With their homes on the line, none could resist the horns of war." 
  innovation_elephantry: "Elephantry"
- innovation_elephantry_desc: "Oh my god, what are those beasts?! They are huge, monstrous graysh horses with giant long noses... They are almost undescribable, true, genuine horror and you haven't even listen to their name: E-L-E-P-H-A-N-T-S. Yes, sends shivers down your spine, doesn't it? Well, what if there was a way to control them and use them in battle? Maybe our enemies will feel the same fear..."
- innovation_phoenecian_elites: "Phoenecian Elites"
- innovation_phoenecian_elites_desc: "Those pesky nobles, they are just annoying, they sit all day thinking about how to get rich, mostly to your detriment. But we could convince them that they can help the country, using that gold to buy good armor, the best training, excellent weapons and protect us. Yes, I think that would be great, even if it's going to cost us to recruit them... I think they found a way to get your gold again, haven't they?"
+ innovation_elephantry_desc: "By the Gods, what are those beasts!? Taller than any horse, and bound in thick, gray skin! Their noses are... disgusting! The horror they instill in others can hardly be described! But... should we manage to control the beasts, then perhaps that fear would possess our foes. Very interesting. Perhaps we can make an arrangement, E-L-E-P-H-A-N-T-S. What a strange name."
+ innovation_phoenecian_elites: "Phoenician Elites"
+ innovation_phoenecian_elites_desc: "Those pesky, irritating nobles. All they do is sit around and think of ways to fatten their pockets! If we could convince them to turn their attention towards the good of the country, then we'd be able to purchase the finest arms and armor! Receive the greatest training! It will be costly, but surely worth it, no? Wait... I've fallen right into their trap, haven't I?"
  
 
  # Customs
