--- a/localization/english/culture/innovations/PAXhellenic_innovations_l_english.yml
+++ b/localization/english/culture/innovations/PAXhellenic_innovations_l_english.yml
@@ -8,11 +8,11 @@
  innovation_stone_walls: "Stone Walls"
  innovation_stone_walls_desc: "Wooden walls have proven to be unreliable against forseeable threats. Flames, boulders, and clever men. We must develop our knowledge of stone and masonry to stifle the tools of our enemies in the future."
  innovation_seric_steel: "Seric Steel"
- innovation_seric_steel_desc: "Ferrite, pearlite, sulfur, arsenic, iron, all together to exhibit unique patterns. Every single blackend line telling a story of molecules fusing together to form something new, more solid than before, stronger, which makes the job of exterminating other humans easier. You can call it "Wootz Steel", the Indians invented it, but we call it "Seric Steel"."
+ innovation_seric_steel_desc: "At the Easternmost end of Alexander the Great's grasp we have found talented blacksmiths who make a steel unlike anything we know. We must import this beautiful alloy and craft weapons of war above all those around us."
  innovation_pilum: "Pilum"
- innovation_pilum_desc: "No need to get close, even if you do not know how to use a bow, you probably know how to throw objects. Before engaging in combat, throw this: a Pilum. The Pilum is a spear made it in a way that not only will it stick into the soft meat of humans, but can pass through wood too, making their shields almost useless."
+ innovation_pilum_desc: "Reinventing the spear has proven much more bountiful to us than we initially thought. Lightweight, long, and tipped with a soft iron, the pilum is the perfect short ranged missile for our soldiers."
  innovation_corvus: "Corvus"
- innovation_corvus_desc: "Triremes are an extremely good and effective design to travel through water, but when it comes to fighting against other Triremes, stuff becomes difficult. Your only possibility is to use a bow, but good luck steading your aim while the waves are continually hitting your feet, making you wobble around constantly. What if there was a way to actually transform a naval battle in a normal land battle? That is what Corvus are made for: big bridges mounted onto the bow of the boats with a sharp metallic tooth on their belly, ready to spring down on other triremes when they get close, letting your men board your enemies."
+ innovation_corvus_desc: "For too long have our naval capabilities been severed from our military talents on land. With the Corvus we have sidestepped Poseidon entirely. It's long hooked mast smashes into the deck of enemy vessels, allowing warriors to walk the plank and deliver certain doom to whatever sailor befalls them."
  innovation_chainmail: "Chainmail"
  innovation_chainmail_desc: "Small little metallic rings chained together, so small and so tightly that they form an impenetrable and light defense for your body. No, before you ask, arrow heads can't fit through the holes and slashing will result into nothing fot the enemy."
  innovation_oplon: "Oplon"
