--- a/localization/english/event_localization/PaxDynasticFactionsRandomEvents_l_english.yml
+++ b/localization/english/event_localization/PaxDynasticFactionsRandomEvents_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
- ade.d.1: "You've exited the doors of your villa, when a group of civilians comes running up to you, breathing heavily. They look like having run for a long time. Your guards stand in front of you, intimidating the newcomers, but, with a movement of your hand, you tell them that there's nothing to worry about and then you proceed to ask the commoners what's the matter. One of them comes in front of the group and tells you "My [ROOT.Char.GetLadyLord], a terrible earthquake has hit the [r_province.GetNameNoTooltip]! You must do something to help those poor people! Many have lost their homes and many more are missing under the rubbles!""
- ade.o.1: "The Army should be able to use its muscles to solve the problem"
+ ade.d.1: "As you exit through the doors of your villa, a group of civilians come running up to you. Practically out of breath, one need not the eyes of the Gods to see they've been running for some time. With a grunt, your guards step in front of thew newcomers, looking to inimidate them. Ever the deft orator, you wave them aside, assuring that there's nothing to worry about. One of the sweat-stained commoners nervously approaches, clearing his throat before he speaks. "My [ROOT.Char.GetLadyLord], a terrible earthquake has devastated [r_province.GetNameNoTooltip]! People are desperately in need of aid. Families are still lost under the rubble, and countless homes have been destroyed!"
+ ade.o.1: "The Army should flex their muscles and solve the problem. That's why they have them, no?"
  ade.ct.1: "The Army faction will get #N -10#! happiness"
- ade.o.2: "This doesn't sounds like a "me" problem. The Citizens are going to save themselves"
+ ade.o.2: "This certainly doesn't sound like a "me" problem. The citizens can save themselves."
  ade.ct.2: "The Citizens faction will get #N -15#! happiness"
- ade.o.3: "I'll instruct a special division to aid the Citizens."
+ ade.o.3: "I'll dispatch a special divison at once to provide aid for the citizens!"
  ade.ct.3: "The Citizens faction will get #P +10#! happiness"
- dfre.d.2: "You're attending a banquet with a bunch of nobles inside your royal villa, everyone seems happy and joyful, the morning passed quite nicely and many congratulated with you for your recent economic reforms which are bringing wealth to our state, when all of a sudden you notice your guards struggling to keep the doors shut. You decide to better inspect the scene and notice that there is a crowd of Citizens trying to enter, claiming they want to eat some of that food too. A big smell of urine mixed with sweat comes from them, their filthy tunics are covered in dirt. [n_leader.GetNameNoTooltipRegnal], the Nobles Leader, gives you a side eye, making you understand that he thinks it is better if you keep them out."
- dfre.o.4: "They are humans too, they need to eat"
- dfre.o.5: "This is no place for a commoner, they would make my villa stink for months"
+ dfre.d.2: "You're attending a banquet with a bunch of nobles inside your royal villa. Everyone seems to be delighted, though the food and drink certainly ensure they stay that way! The morning passed blissfully and many nobles were quick to offer their congratulations on your recent economic reforms. The wealth they've brought to the state ensures that many more banquets will be held. Their praise is interrupted, however, as you notice your guards struggling to keep the front doors shut. Curious, you decide to inspect the scene and notice a crowd of commoners shoving the doors, desperate to try and enter. They cry out, desperately hoping to try the food whose scent has wafted over the walls. Yet all the spices in the world couldn't hide the scent of dirt and urine that envelops them. [n_leader.GetNameNoTooltipRegnal], the Leader of the Nobles, grimaces as he shakes his head. It's clear he'd rather keep them on the opposite side of the walls." 
+ dfre.o.4: "They are humans too, they need to eat, and we have much to share."
  dfre.ct.4: "The Nobles faction will get #N -10#! happiness"
+ dfre.o.5: "This is no place for a commoner, they would make my villa stink for months!"
  dfre.ct.5: "The Citizens faction will get #N -10#! happiness"
- dfre.d.3: "\"We did not pledge our loyalty to you, but to [ROOT.Char.GetName]!\" you hear shouting from your backyard. Interested on understanding what all of the fuss is about, you decide to get near the sounds. There you find a commander of your army arguing with a noble. He wants to pay him and the soldiers under his commands to intimidate one of his rivals, while the commander seems pretty disgusted by the offer, he doesn't like being used as a mercenary."
- dfre.o.6: "I think the Army can be a mercenary too sometimes if paid enough."
- dfre.o.7: "This is an inappropriate proposal, the Army is not a mercenary unit."
+ dfre.d.3: "\"We did not pledge our loyalty to you, but to [ROOT.Char.GetName]!\" you hear shouting from your backyard. Curious as to what the fuss is about, you decide to investigate the commotion. There you find one of the commander's of your army arguing with a noble. The richly clad noble insists that he's only asking the commander and his soldiers to intimidate one of his rivals, nothing more. The commander, however, seems disgusted at the prospect of being treated as some common mercenary."
+ dfre.o.6: "If there's enough coin, then what's the difference between army and mercenary?"
+ dfre.o.7: "This is an inappropriate proposal! Intimidating rivals is work for simple mercenaries! Not the elite soldiers I employ!"
  dfre.ct.6: "The Nobles faction will get #P +5#! happiness"
  dfre.ct.7: "$ade.ct.1$\n$dfre.ct.6$"
  dfre.ct.8: "The Army faction will get #P +5#! happiness"
