--- a/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
+++ b/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
@@ -35,7 +35,7 @@
  innovation_etruscan_wars: "Etruscan Wars"
  innovation_etruscan_wars_desc: "One must wonder as to which is a more terrifying sight. A trained soldier, or a man, pushed to the edge of his limits, and forced to fight for all that he holds dear. The Etruscans are the latter. With their homes on the line, none could resist the horns of war." 
  innovation_elephantry: "Elephantry"
- innovation_elephantry_desc: "By the Gods, what are those beasts!? Taller than any horse, and bound in thick, gray skin! Their noses are... disgusting! The horror they instill in others can hardly be described! But... should we manage to control the beasts, then perhaps that fear would possess our foes. Very interesting. Perhaps we can make an arrangement, E-L-E-P-H-A-N-T-S. What a strange name."
+ innovation_elephantry_desc: "By the Gods, what are those beasts!? Taller than any horse, and bound in thick, gray skin! Their noses are... disgusting! The horror they instill in others can hardly be described! But... should we manage to control the beasts, then perhaps that fear would possess our foes. Very interesting. Perhaps we can make an arrangement with these strange beast. Elephants. What a strange name."
  innovation_phoenecian_elites: "Phoenician Elites"
  innovation_phoenecian_elites_desc: "Those pesky, irritating nobles. All they do is sit around and think of ways to fatten their pockets! If we could convince them to turn their attention towards the good of the country, then we'd be able to purchase the finest arms and armor! Receive the greatest training! It will be costly, but surely worth it, no? Wait... I've fallen right into their trap, haven't I?"
  
